<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton4"
        android:layout_width="118dp"
        android:layout_height="88dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="264dp"
        android:layout_marginBottom="216dp"
        android:text="@string/prinudlwindow"

        app:layout_constraintBottom_toTopOf="@+id/materialButton6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton8"
        android:layout_width="120dp"
        android:layout_height="63dp"
        android:layout_marginEnd="16dp"

        android:layout_marginBottom="16dp"
        android:text="@string/next"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton6"
        android:layout_width="120dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"

        android:layout_marginBottom="16dp"
        android:text="@string/nathad"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton5"
        android:layout_width="118dp"
        android:layout_height="88dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="294dp"
        android:text="@string/prinudlpechka"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/materialButton7"
        app:layout_constraintStart_toEndOf="@+id/materialButton4"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton7"
        android:layout_width="118dp"
        android:layout_height="88dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="264dp"
        android:layout_marginBottom="216dp"
        android:text="@string/prinudluvlag"

        app:layout_constraintBottom_toTopOf="@+id/materialButton8"
        app:layout_constraintStart_toEndOf="@+id/materialButton5"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="1dp"
        android:background="@color/colorprimary"
        android:padding="8dp"
        android:text="SmartHouse"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="252dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_margin="0dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="159dp"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:text="@string/onoff"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>