<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:layout_width="120dp"
        android:layout_height="63dp"
        android:text="@string/next"


        tools:layout_editor_absoluteX="275dp"
        tools:layout_editor_absoluteY="652dp" />

    <TextView
        android:layout_width="157dp"
        android:layout_height="58dp"
        android:layout_margin="30dp"
        android:background="@color/colorprimary"
        android:padding="8dp"
        android:text="@string/temp"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceBody1"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="232dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



    <TextView
        android:layout_width="157dp"
        android:layout_height="58dp"
        android:layout_margin="30dp"
        android:background="@color/colorprimary"
        android:padding="8dp"
        android:text="@string/tempulica"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceBody1"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="290dp" />



    <TextView
        android:layout_width="157dp"
        android:layout_height="58dp"
        android:layout_margin="30dp"
        android:background="@color/colorprimary"
        android:padding="8dp"
        android:text="@string/vlaga"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceBody1"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="348dp" />

    <TextView
        android:layout_width="157dp"
        android:layout_height="58dp"
        android:layout_margin="30dp"
        android:background="@color/colorprimary"
        android:padding="8dp"
        android:text="@string/davl"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceBody1"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="406dp" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

</LinearLayout>

    <TextView
        android:layout_width="253dp"
        android:layout_height="9dp"
        android:layout_weight="122"
        android:background="@color/colorAccent"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="455dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <TextView
        android:layout_width="253dp"
        android:layout_height="9dp"
        android:layout_weight="122"
        android:background="@color/colorAccent"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="406dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <TextView
        android:layout_width="253dp"
        android:layout_height="9dp"
        android:layout_weight="122"
        android:background="@color/colorAccent"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="348dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <TextView
        android:layout_width="253dp"
        android:layout_height="9dp"
        android:layout_weight="122"
        android:background="@color/colorAccent"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="290dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <TextView
        android:layout_width="253dp"
        android:layout_height="9dp"
        android:layout_weight="122"
        android:background="@color/colorAccent"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="232dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <TextView
        android:layout_width="12dp"
        android:layout_height="230dp"
        android:layout_weight="122"
        android:background="@color/colorAccent"
        tools:layout_editor_absoluteX="237dp"
        tools:layout_editor_absoluteY="234dp" />

    <TextView
        android:layout_width="12dp"
        android:layout_height="230dp"
        android:layout_weight="122"
        android:background="@color/colorAccent"
        tools:layout_editor_absoluteX="323dp"
        tools:layout_editor_absoluteY="234dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="1dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorprimary"
        android:padding="8dp"
        android:text="SmartHouse"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceBody1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:layout_width="252dp"
        android:layout_height="46dp"
        android:layout_margin="0dp"
        android:layout_marginTop="13dp"
        android:background="@color/colorAccent"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/data"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceBody1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="38dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
