<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        android:layout_width="120dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"

        android:layout_marginBottom="16dp"
        android:text="@string/nathad"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton2"
        android:layout_width="120dp"
        android:layout_height="63dp"
        android:layout_marginEnd="16dp"

        android:layout_marginBottom="16dp"
        android:text="@string/next"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton3"
        android:layout_width="120dp"
        android:layout_height="63dp"
        android:layout_marginStart="145dp"

        android:layout_marginEnd="146dp"
        android:layout_marginBottom="184dp"
        android:text="@string/vlaga2"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/textView6"
        android:layout_width="118dp"
        android:layout_height="8dp"
        android:layout_marginStart="13dp"

        android:layout_marginTop="275dp"
        android:layout_marginBottom="116dp"
        android:layout_weight="1"
        android:background="@color/colorAccent"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintBottom_toTopOf="@+id/materialButton3"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="120dp"
        android:layout_height="42dp"
        android:layout_margin="16dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="259dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="509dp"
        android:padding="8dp"
        android:text="min"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintBottom_toTopOf="@+id/materialButton"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="120dp"
        android:layout_height="42dp"
        android:layout_margin="16dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="259dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="509dp"
        android:padding="8dp"
        android:text="max"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintBottom_toTopOf="@+id/materialButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="@color/colorprimary"
        android:padding="8dp"
        android:text="SmartHouse"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="252dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_margin="0dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="159dp"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:text="@string/temp1"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="MissingConstraints" />



</androidx.constraintlayout.widget.ConstraintLayout>